# VectorMind

./: .gitignore  README.md  alembic.ini  dev.db  docker-compose.yml  insta  pyproject.toml  smoke_test_agents.py
admin/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
admin/src/: App.vue  main.ts  router.ts  style.css
alembic/: README  env.py  script.py.mako
alembic/versions/: 0001_init.py  0002_marketing.py  0003_marketing_track_and_interactions.py  0004_marketing_interaction_jobs.py  0005_executors.py  0006_rbac_and_subscriptions.py
book_recommendation/: __init__.py  agent.py  router.py  workflow.py
deeplegacy/: __init__.py  agent.py  historyAI.py  router.py  workflow.py
docs/: marketing_requirements_db.md  noctua_marketing_extraction.md  noctua_to_aiworkflows_mapping.md
extension/: manifest.json  popup.html  popup.js
local_agent/: main.py  platform_id.py  playwright_tasks.py  task_queue.py
morning_radio/: __init__.py  agent.py  router.py  workflow.py
server/: __init__.py  config.py  db.py  logging_utils.py  main.py  models.py
server/api/: executor_artifacts.py  executors.py  llm.py  marketing.py  marketing_ingest.py  media_accounts.py  media_publish.py  prompts.py  rbac.py  runs.py  skills.py  workflows.py
server/auth/: bootstrap.py  deps.py  rbac.py  router.py  security.py
server/core/: agents.py  types.py
server/llm/: client.py  runtime.py  secrets.py
server/marketing/: __init__.py  crawlers.py  crawlers_playwright.py  ingest.py  interactions_playwright.py  (+8 more)
travel_planner/: __init__.py  agent.py  router.py  workflow.py
(+51 files in other folders)
